# Tree-Sum-Parallel-Programming

./: CMakeLists.txt  README.md  main.c
